--- a/dailyquotewidget.html
+++ b/dailyquotewidget.html
@@ -16,6 +16,7 @@
             margin: auto;
             font-variant-caps: petite-caps;
             font-size: 2em;
+            Border:
 
         }
 
