--- a/dailyquotewidget.html
+++ b/dailyquotewidget.html
@@ -16,28 +16,15 @@
             margin: auto;
             font-variant-caps: petite-caps;
             font-size: 2em;
-            Border:
+            Border:3px solid #FFFFFF;
+            border-radius: 5px;
+            box-shadow: 2px 2px 1px 0px #FFFFFF;
 
         }
 
         div {
              width: 95%;
              min-height: 100px;
-
-            background:
-                linear-gradient(to right, white 4px, transparent 4px) 0 0,
-                linear-gradient(to right, white 4px, transparent 4px) 0 100%,
-                linear-gradient(to left, white 4px, transparent 4px) 100% 0,
-                linear-gradient(to left, white 4px, transparent 4px) 100% 100%,
-                linear-gradient(to bottom, white 4px, transparent 4px) 0 0,
-                linear-gradient(to bottom, white 4px, transparent 4px) 100% 0,
-                linear-gradient(to top, white 4px, transparent 4px) 0 100%,
-                linear-gradient(to top, white 4px, transparent 4px) 100% 100%;
-
-            background-repeat: no-repeat;
-            background-size: 20px 20px;
-}
-
      
     </style>
 </head>
