--- a/dailyquotewidget.html
+++ b/dailyquotewidget.html
@@ -12,6 +12,10 @@
             padding: 5px 5px ;
             color: #FFFFFF;
             text-align: center;
+            display: flex;
+            justify-content:center;
+            align-items:center;
+            flex-direction: column;
                 max-width: 95%;
             margin: auto;
             font-variant-caps: petite-caps;
