--- a/greetingwidget.html
+++ b/greetingwidget.html
@@ -37,12 +37,12 @@
 
         .date {
       
-            font-family: monospace;
+            font-family: sans-serif;
             font-size: 2em;
         }
 
         .clock {
-            font-family: monospace;
+            font-family: sans-serif;
             font-size: 2em;
         }
 
