--- a/greetingwidget2.html
+++ b/greetingwidget2.html
@@ -37,12 +37,12 @@
 
         .date {
       
-            font-family: sans-serif;
+            font-family: serif;
             font-size: 2em;
         }
 
         .clock {
-            font-family: sans-serif;
+            font-family: serif;
             font-size: 2em;
         }
 
