--- a/greetingwidget2.html
+++ b/greetingwidget2.html
@@ -107,7 +107,7 @@ function dispalyGreetings(today){
 
     function dispalyDate(today) {  
        
-        const days = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
+        const days = ['Sun.', 'Mon.', 'Tues.', 'Wed.', 'Thu.', 'Fri.', 'Sat.'];
         const monthNames = ["January", "February", "March", "April", "May", "June",
   "July", "August", "September", "October", "November", "December"
 ];
@@ -115,7 +115,7 @@ function dispalyGreetings(today){
         var dayName = days[today.getDay()];
         var monthName = monthNames[today.getMonth()];
         var date = today.getDate();
-        var year = today.getFullYear();
+        var year = today,getFullYear();
         document.getElementById('date').innerHTML =dayName+", "+monthName+" "+date+" "+year;
 
     }
