--- a/greetingwidget2.html
+++ b/greetingwidget2.html
@@ -107,7 +107,7 @@ function dispalyGreetings(today){
 
     function dispalyDate(today) {  
        
-        const days = ['Sun.', 'Mon.', 'Tues.', 'Wed.', 'Thu.', 'Fri.', 'Sat.'];
+        const days = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
         const monthNames = ["January", "February", "March", "April", "May", "June",
   "July", "August", "September", "October", "November", "December"
 ];
