--- a/greetingwidget2.html
+++ b/greetingwidget2.html
@@ -115,7 +115,7 @@ function dispalyGreetings(today){
         var dayName = days[today.getDay()];
         var monthName = monthNames[today.getMonth()];
         var date = today.getDate();
-        var year = today,getFullYear();
+        var year = today.getFullYear();
         document.getElementById('date').innerHTML =dayName+", "+monthName+" "+date+" "+year;
 
     }
